# Protobuf

./: .gitignore  README.md  generate_class.py  protobuf_types.py  sandbox.py  setup.cfg  simple.proto  simple_ptbf.py
protobuf/: Test1_ptbf.py  Test2_ptbf.py  __main__.py  _ptbf.py  class_propery.py  generate_class.py  protobuf_types.py
tests/: Test1_ptbf.py  Test2_ptbf.py  TestComplex_ptbf.py  TestImport_ptbf.py  TestInner2_ptbf.py  TestInner_ptbf.py  TestRepeated_ptbf.py  protobuf_tests.py  s2.proto  sandbox.py  simple.proto  simple_ptbf.py  test1.proto  test2.proto  test3.proto
