[metadata]
name = protobuf_task
version = 0.2
author = Alexander Maximov, Timofey Okunkov
description = Google protobuf implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Axonny/Protobuf
project_urls =
    Bug Tracker = https://github.com/Axonny/Protobuf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src